# SparkNode

./: .env.example  .gitignore  README.md  babel.json  docker-compose.yml
crates/: Cargo.toml
crates/sp-common/: Cargo.toml  build.rs
crates/sp-common/src/: error.rs  lib.rs
crates/sp-common/src/crdt/: graph_crdt.rs  lww_register.rs  mod.rs
crates/sp-common/src/proto/: narrative.proto  soul.proto
crates/sp-common/src/types/: edge.rs  mod.rs  npc.rs  probability.rs  story_node.rs  validation.rs  world_state.rs
crates/sp-economy-engine/: Cargo.toml
crates/sp-economy-engine/src/: lib.rs
crates/sp-gateway/: Cargo.toml
crates/sp-gateway/src/: config.rs  error.rs  main.rs
crates/sp-gateway/src/grpc/: client.rs  mod.rs  narrative_server.rs
crates/sp-gateway/src/middleware/: auth.rs  auth_layer.rs  mod.rs  rate_limit.rs
crates/sp-gateway/src/routes/: collapse.rs  edges.rs  generate.rs  health.rs  mod.rs  nodes.rs  stories.rs
crates/sp-gateway/src/services/: dag.rs  mdp.rs  mod.rs
crates/sp-gateway/src/ws/: handler.rs  message.rs  mod.rs  pulse_stream.rs
crates/sp-narrative-engine/: Cargo.toml
crates/sp-narrative-engine/src/: lib.rs
crates/sp-narrative-engine/src/chronos/: butterfly.rs  checkpoint.rs  mod.rs  rollback.rs  timeline.rs
crates/sp-narrative-engine/src/dag/: diff.rs  graph.rs  mod.rs  operations.rs  traversal.rs
crates/sp-narrative-engine/src/domain/: aggregate.rs  commands.rs  events.rs  mod.rs
crates/sp-narrative-engine/src/mdp/: matrix.rs  mod.rs  observer.rs  policy.rs  transition.rs
crates/sp-narrative-engine/src/merge/: conflict.rs  mod.rs
crates/sp-narrative-engine/src/persistence/: event_store.rs  graph_projection.rs  mod.rs
crates/sp-soul-engine/: Cargo.toml
crates/sp-soul-engine/src/: lib.rs
crates/sp-soul-engine/src/agent/: mod.rs  npc_agent.rs  personality.rs
crates/sp-soul-engine/src/amygdala/: emotion.rs  mod.rs
crates/sp-soul-engine/src/hippocampus/: consolidation.rs  emotion_weight.rs  forgetting.rs  memory.rs  mod.rs  qdrant.rs
crates/sp-world-engine/: Cargo.toml
crates/sp-world-engine/src/: event_trigger.rs  lib.rs
migrations/: 001_create_stories.sql  002_create_tables.sql  003_seed_dev_user.sql
scripts/: config.ps1  fix-rust-toolchain.ps1  rust-env.ps1  setup-env.bat  setup-env.ps1  setup.sh  sparknode.env.example.ps1
services/sp-llm-router/: pyproject.toml
services/sp-llm-router/src/: main.py
web/: next.config.ts  package-lock.json  package.json  tailwind.config.ts
web/src/app/: globals.css  layout.tsx  page.tsx
