[workspace]
resolver = "2"
members = [
    "sp-common",
    "sp-gateway",
    "sp-narrative-engine",
    "sp-world-engine",
    "sp-soul-engine",
    "sp-economy-engine",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/your-org/sparknode"
authors = ["SparkNode Team"]

[workspace.dependencies]
# ── Web 框架 ──
axum = { version = "0.7", features = ["ws", "macros"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# ── 异步运行时 ──
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
futures = "0.3"

# ── 序列化 ──
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# ── 数据库 ──
sqlx = { version = "0.7", features = ["runtime-tokio", "tls-native-tls", "postgres", "uuid", "chrono", "json"] }
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }

# ── gRPC ──
tonic = "0.12"
tonic-build = "0.12"
prost = "0.13"

# ── 图数据库 (Memgraph Bolt 协议) ──
neo4rs = "0.9.0-rc.9"

# ── UUID & 时间 ──
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
time = "=0.3.36"

# ── 错误处理 ──
anyhow = "1"
thiserror = "1"

# ── 日志 ──
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# ── HTTP 客户端 ──
reqwest = { version = "0.12", features = ["json", "stream"] }

# ── 配置 ──
dotenvy = "0.15"

# ── 数学/线性代数 (MDP 矩阵运算) ──
nalgebra = "0.33"

# ── 本项目内部 crate ──
sp-common = { path = "sp-common" }
sp-narrative-engine = { path = "sp-narrative-engine" }
sp-world-engine = { path = "sp-world-engine" }
sp-soul-engine = { path = "sp-soul-engine" }
sp-economy-engine = { path = "sp-economy-engine" }

# ── 编译优化 ──
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 1

