[package]
name = "sp-common"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "SparkNode 共享数据结构、协议定义与核心类型"

[dependencies]
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tonic.workspace = true
prost.workspace = true
nalgebra.workspace = true
sqlx.workspace = true
redis.workspace = true
reqwest.workspace = true

[build-dependencies]
tonic-build.workspace = true