[package]
name = "sp-soul-engine"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "SparkNode 灵魂引擎 (NPC Agent + 海马体记忆 + 杏仁核情感)"

[dependencies]
sp-common.workspace = true

serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
uuid.workspace = true
chrono.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true